--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "snowpack build",
-    "start": "snowpack dev",
+    "watch": "snowpack build --watch",
     "eslint": "eslint --ext .js,.jsx src/",
     "eslint:fix": "eslint --fix --ext .js,.jsx src/",
     "test": "echo \"Error: no test specified\" && exit 1"
